# uni-scraper-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: pipeline_watch.py  run_single_scrape.py
src/agent/: extractor.py  finder.py  navigator.py  orchestrator.py  planner.py  validator.py
src/agent/prompts/: extraction.py  navigation.py  planning.py  search.py  system.py  validation.py
src/api/: app.py  dependencies.py  middleware.py  pipeline_view.py
src/api/routes/: courses.py  health.py  programs.py  scrape.py  universities.py
src/browser/: html_cleaner.py  manager.py  page_fetcher.py  rate_limiter.py  robots_checker.py
src/cache/: page_cache.py
src/config/: logging_config.py  settings.py
src/db/: connection.py
src/db/migrations/: 001_initial_schema.sql  002_add_job_metadata.sql
src/db/repositories/: __init__.py  course_repo.py  program_repo.py  scrape_job_repo.py  university_repo.py
src/models/: __init__.py  agent_state.py  api_schemas.py  domain.py  enums.py
src/queue/: job_manager.py  worker.py
src/search/: __init__.py  resolver.py  serp_client.py
src/utils/: retry.py  text_utils.py  token_counter.py  url_utils.py
tests/: conftest.py
tests/unit/: test_domain_models.py  test_html_cleaner.py  test_text_utils.py  test_url_utils.py
